# Zhu-Zhou-Li-2018-QMF18

./: .gitignore  README.md  REFERENCE.md  pyproject.toml
src/qmf18_repro/: __init__.py  compare_table3.py  compute_tilde_lambda.py  compute_tov.py  constants.py  crust.py  eos.py  fermi.py  fields.py  generate_eos.py  main.py  plot_eos.py  quark.py  quark_barik_full.py  tov.py
